--- a/static/css/style.css
+++ b/static/css/style.css
@@ -3,10 +3,11 @@
 /* Background */
 
 .bg {
-    height: 100vh;
+    height: 100%;
     background-color: #f4f4f4;
     font-family: 'Baloo Thambi 2', cursive;
     font-weight: 400;
+    padding-bottom: 2em;
 }
 
 .game-bg {
@@ -135,6 +136,34 @@
 .training,
 .save {
     display: none;
+}
+
+
+/* Footer */
+
+.social-icons a {
+    display: inline-block;
+    height: 3.5rem;
+    width: 3.5rem;
+    background-color: #495057;
+    color: #fff !important;
+    border-radius: 100%;
+    text-align: center;
+    font-size: 1.5rem;
+    line-height: 3.5rem;
+    margin-right: 1rem;
+    transition: all 0.35s ease-in-out;
+    -moz-transition: all 0.35s ease-in-out;
+    -webkit-transition: all 0.35s ease-in-out;
+    -o-transition: all 0.35s ease-in-out;
+}
+
+.social-icons a:last-child {
+    margin-right: 0;
+}
+
+.social-icons a:hover {
+    background-color: rgb(66, 209, 130);
 }
 
 
